fixed the formik issue by removing wrap div from styled-components and added it to the css file. Added Yup and implemented custom errors for email and password

--- a/chef-portfolio3/src/App.css
+++ b/chef-portfolio3/src/App.css
@@ -100,9 +100,12 @@ nav a:hover:after {
 }
 
 form {
+  background-color: rgba(255,255,255,0.9);
   margin: 5% 2%;
   display: flex;
   flex-flow: column;
+  width: 80vw;
+  padding: 3% 0;
 }
 
 input {
@@ -234,4 +237,21 @@ nav {
 }
 .from-right {
   grid-column: 3 / 4;
+}
+
+/* Registration page */
+
+.wrap{
+  background-image: url("https://images.pexels.com/photos/1640774/pexels-photo-1640774.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 10% 0;
+  margin-top: 12%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
